<resources>
    <string name="app_name">Illusion Müller-Lyer</string>

    <string name="commencer">Commencer</string>
    <string name="options">Options</string>
    <string name="illusion_de_m_ller_lyer">Illusion de Müller-Lyer</string>
    <string name="nombre_d_essais">Nombre d\'essais</string>
    <string name="_0">0</string>
    <string name="continuer">Continuer</string>
    <string name="valider">Valider</string>
    <string name="nombre_d_essais_de_l_entrainement">Nombre d\'essais de l\'entrainement</string>
    <string name="nombre_d_essais_de_l_exercice">Nombre d\'essais de l\'exercice</string>
    <string name="logo_universit_champollion">logo université Champollion</string>
    <string name="seed">Seed</string>
    <string name="consignesEntrainement">Vous devez comparer le trait de GAUCHE à celui de DROITE \n Vous répondez « Plus grand », « Egal », "Moins grand » si vous percevez le trait de GAUCHE plus grand, égal ou moins grand que celui de DROITE »  \n Vous avez @TEMPS@ secondes pour répondre</string>
    <string name="consignesEntrainementSuite">Il y a trois parties : \n Un entrainement avec @ENTRAINEMENT@ essais \n Une première série de @EXERCICE@ essais \n Une seconde série de @EXERCICE@ essais \n\n A la fin vos résultats sont affichés, VOUS DEVEZ LES RECOPIER.</string>
    <string name="egal">Egal</string>
    <string name="moins_grand">Moins grand</string>
    <string name="plus_grand">Plus grand</string>
    <string name="fin_de_l_entrainement">Fin de l\'entrainement</string>
    <string name="les_prochaines_s_ries_seront_enregistr_es_et_les_r_sultats_seront_affich_s_la_fin">Les prochaines séries seront enregistrées et les résultats seront affichés à la fin.</string>
    <string name="seed_0_pour_al_atoire">Seed (0 pour aléatoire)</string>
    <string name="r_ponse_donn_e">Réponse donnée </string>
    <string name="bonne_r_ponse">Bonne réponse </string>
    <string name="dur_e_d_affichage">Durée d\'affichage</string>
    <string name="consigne_exercice_suite">Début de la seconde série.</string>
    <string name="demonstration">demonstration</string>
</resources>
